# llm-company

./: .env.example  .gitignore  README.md  pyproject.toml  wiki.config.toml
rag_vault/: README.md  agent_logic.py  app.py  debug_embeddings.py  docs_cache.pkl  ingest.py  pyproject.toml  search.py  tools.py  utils.py
rag_vault/faiss_index/: index.faiss  index.pkl
raw/samsung-electronics-public/business/display/: sdc.md
raw/samsung-electronics-public/business/ds/: device-solutions.md  foundry-and-nodes.md  memory-business.md  system-lsi-image-sensors.md
raw/samsung-electronics-public/business/dx/: device-experience.md  mobile-ai.md  networks-vran-oran.md  visual-display-appliances.md
raw/samsung-electronics-public/company/management/: leadership.md
raw/samsung-electronics-public/company/network/: global-bases.md
raw/samsung-electronics-public/company/profile/: overview.md
raw/samsung-electronics-public/esg/environment/: net-zero-and-circular-economy.md
raw/samsung-electronics-public/esg/governance/: board-structure.md
raw/samsung-electronics-public/esg/people/: csr-education.md
raw/samsung-electronics-public/esg/sustainability/: sustainability-and-governance.md
raw/samsung-electronics-public/finance/fy2025/: division-performance.md  fy2025-results.md  rd-investment.md
raw/samsung-electronics-public/strategy/ai/: ai-and-hbm-strategy.md
raw/samsung-electronics-public/strategy/mobile/: ai-device-ecosystem.md
skills/llm-wiki-builder/: SKILL.md
skills/llm-wiki-builder/agents/: openai.yaml
skills/llm-wiki-builder/references/: workflow.md
src/llm_wiki/: __init__.py  build.py  cli.py  config.py  generate.py  mime.py  preprocess.py  providers.py  refine.py  resolve.py  schemas.py  summarize.py  utils.py
tests/: test_integration.py  test_mime_and_utils.py  test_preprocess.py  test_refine.py  test_resolve.py  test_summarize.py
(+1 files in other folders)
