[project]
name = "llm-company-wiki"
version = "0.1.0"
description = "Build an Obsidian-style internal LLM wiki from raw company files."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
docling = ["docling>=2.0"]
vertex = ["google-genai>=1.0"]
dev = ["pytest>=8.0"]

[project.scripts]
llm-wiki = "llm_wiki.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_wiki"]

[tool.uv]
managed = true
workspace = { members = ["rag_vault"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
